--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <p>Est Per/Hours: $<span id="perHours">0.001</span>/Hours</p>
             <button id="toggle-mining" onclick="toggleMining()">stop mining</button>
             <div>
-            <button class="view-button" onclick="location.href='https://panel.hidencloud.com/server/26f1b0bc'">Check Mineing Logs</button>
+            <button class="view-button" onclick="location.href='https://panel.hidencloud.com/server/26f1b0bc'">Check Mining Logs</button>
             </div>
             <div>
                 <button class="boost-button" onclick="location.href='boost.html'">boost</button>
